<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_text"
            android:textSize="30dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp">
            <Button
                android:id="@+id/true_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_btn"
                android:layout_marginRight="20dp"/>
            <Button
                android:id="@+id/false_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_btn"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/cheat_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="作弊"
            android:layout_marginTop="50dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            >



<!--            <Button-->
<!--                android:id="@+id/last_btn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/last_btn"-->
<!--                android:layout_marginRight="20dp"-->
<!--                android:drawableLeft="@drawable/arrow_left"/>-->

<!--            <Button-->
<!--            android:id="@+id/next_btn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/next_btn"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:drawableRight="@drawable/arrow_right"-->
<!--            android:drawablePadding="4dp"/>-->

            <ImageButton
                android:id="@+id/last_imgBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/last_imgBtn"/>
            <ImageButton
                android:id="@+id/next_imgBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/next_imgBtn"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>